--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,77 @@
     </div>
   </div>
 </nav>
+
+ //carousel
+
+<div id="portfolio-carousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#portfolio-carousel" data-slide-to="0" class="active"></li>
+    <li data-target="#portfolio-carousel" data-slide-to="1"></li>
+    <li data-target="#portfolio-carousel" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <div class="container">
+        <div class="carousel-caption">
+          <h1>About me</h1>
+          <p>When you are born on Balkan penninsula, you know you have to fight or you will get stuck in the backward mentality goo forever</p>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <div class="container">
+        <div class="carousel-caption">
+          <h1>About my skills</h1>
+          <p>My dearest skill is empathy, it does not help you code per se but it helps in all kind of ways. I enjoy being a problem solver, I always approach problems analytically and programmaticaly, looking to solve a problem from the each possible angle.</p>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <div class="container">
+        <div class="carousel-caption">
+          <h1>About my work</h1>
+          <p>Check out my GitHub to see some of the projects I have completed.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <a class="left carousel-control" href="#portfolio-carousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#portfolio-carousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+  <div class="marketing">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <span class="glyphicon glyphicon-music">
+            <h2>HTML and CSS</h2>
+            <p> Great simple tools with lots of power</p>
+          </span>
+        </div>
+        <div class="col-md-4">
+          <span class="glyphicon glyphicon-camera">
+            <h2>JS</h2>
+            <p> Absolute must for web development and for transitioning onto backend</p>
+          </span>
+        </div>
+        <div class="col-md-4">
+          <span class="glyphicon glyphicon-flower">
+            <h2>SQL</h2>
+            <p> Databases are a must, whether a web, or a mobile app, the SQL is just fantastic</p>
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
+
         </head>
 <body>
 
