--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,6 @@
   </div>
 </nav>
 
- //carousel
 
 <div id="portfolio-carousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
@@ -49,7 +48,7 @@
       <div class="container">
         <div class="carousel-caption">
           <h1>About my skills</h1>
-          <p>My dearest skill is empathy, it does not help you code per se but it helps in all kind of ways. I enjoy being a problem solver, I always approach problems analytically and programmaticaly, looking to solve a problem from the each possible angle.</p>
+          <p>I enjoy being a problem solver, I always approach problems analytically and programmaticaly, looking to solve a problem from the each possible angle.</p>
         </div>
       </div>
     </div>
@@ -73,28 +72,27 @@
 </div>
 
   <div class="marketing">
+    <div class="footer">
+      <h3>Contact me!</h3>
+      <p>Send me an email</p>
+    </div>
     <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <span class="glyphicon glyphicon-music">
-            <h2>HTML and CSS</h2>
+        <div class="col-sm-4 col-md-4">
+          <span class="glyphicon glyphicon-globe"></span>
+            <h3>HTML and CSS</h3>
             <p> Great simple tools with lots of power</p>
-          </span>
         </div>
-        <div class="col-md-4">
-          <span class="glyphicon glyphicon-camera">
-            <h2>JS</h2>
-            <p> Absolute must for web development and for transitioning onto backend</p>
-          </span>
+        <div class="col-sm-4 col-md-4">
+          <span class="glyphicon glyphicon-thumbs-up"></span>
+            <h3>JS</h3>
+            <p> Absolute must for web development</p>
         </div>
-        <div class="col-md-4">
-          <span class="glyphicon glyphicon-flower">
-            <h2>SQL</h2>
-            <p> Databases are a must, whether a web, or a mobile app, the SQL is just fantastic</p>
-          </span>
+        <div class="col-sm-4 col-md-4">
+          <span class="glyphicon glyphicon-tasks"></span>
+            <h3>SQL</h3>
+            <p> SQL is just fantastic</p>
         </div>
       </div>
-    </div>
   </div>
 
         </head>
@@ -103,31 +101,7 @@
   <!--
     Previous project placeholder begins
   -->
-  <div class="header">
-    <h1>Morgan McCircuit</h1>
-    <h2>I write code</h2>
-  </div>
-
-  <div class="tagline">
-    <h3>Who I am</h3>
-    <p>Hi, my name is Morgan and I love to write code that is efficient.</p>
-  </div>
-
-
-  <div class="skills">
-    <h3>What I do</h3>
-    <p>Here are some of the languages I use on a day-to-day.</p>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
-    </ul>
-  </div>
-
-  <div class="contact">
-    <h3>Get in touch</h3>
-    <p>I live in the cloud and can't be seen. Send messages to the good people at <a target="_blank" href="https://twitter.com/codeschool">Code School</a> and they'll notify me.</p>
-  </div>
+  
   <!--
     Previous project placeholder ends
     (unused pieces will be deleted at the last task)
