--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,7 @@
       <p>Send me an email</p>
     </div>
     <div class="container">
+      <div class="row">
         <div class="col-sm-4 col-md-4">
           <span class="glyphicon glyphicon-globe"></span>
             <h3>HTML and CSS</h3>
@@ -93,6 +94,7 @@
             <p> SQL is just fantastic</p>
         </div>
       </div>
+      </div>
   </div>
 
         </head>
@@ -101,7 +103,7 @@
   <!--
     Previous project placeholder begins
   -->
-  
+
   <!--
     Previous project placeholder ends
     (unused pieces will be deleted at the last task)
