--- a/index.html
+++ b/index.html
@@ -72,10 +72,13 @@
 </div>
 
   <div class="marketing">
+
     <div class="footer">
+      <div class="container">
       <h3>Contact me!</h3>
       <p>Send me an email</p>
     </div>
+  </div>
     <div class="container">
       <div class="row">
         <div class="col-sm-4 col-md-4">
